--- a/section04/package.json
+++ b/section04/package.json
@@ -5,12 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
+    "start": "nodemon -r dotenv/config app.js",
     "start-server": "node app.js"
   },
   "author": "Darcee Quebe",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^14.3.2",
     "nodemon": "^1.19.4"
   },
   "dependencies": {
