--- a/section04/package.json
+++ b/section04/package.json
@@ -28,6 +28,8 @@
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
